--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,23 @@ target
 *.swp
 *.sublime-project
 *.sublime-workspace
+
+### Windows ###
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
