--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,7 +35,9 @@ extra_css:
 
 markdown_extensions:
   - pymdownx.arithmatex:
-      generic: false
+      generic: true
+      tex_inline_wrap: ['$', '$']
+      tex_block_wrap: ['$$', '$$']
   - pymdownx.highlight
   - admonition
   - pymdownx.details
