Use $ and $$ as LaTeX wrappers (#952)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,8 @@ extra_css:
 markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
+      tex_inline_wrap: ['$', '$']
+      tex_block_wrap: ['$$', '$$']
   - pymdownx.highlight
   - admonition
   - pymdownx.details
