--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -14,8 +14,16 @@ jobs:
       ${{ github.event.workflow_run.event == 'pull_request' &&
       github.event.workflow_run.conclusion == 'success' }}
     steps:
+      - name: "Get PR information"
+        uses: potiuk/get-workflow-origin@751d47254ef9e8b5eef955e24e79305233702781
+        id: source-run-info
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          sourceRunId: ${{ github.event.workflow_run.id }}
+
       - name: Checkout repository
         uses: actions/checkout@v3
+
       - name: 'Download artifact'
         uses: actions/github-script@v6
         with:
@@ -36,19 +44,28 @@ jobs:
             });
             let fs = require('fs');
             fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/page-build.zip`, Buffer.from(download.data));
+
       - run: |
           unzip page-build.zip -d public
 
       - name: change URLs for large files
+        if: ${{ steps.source-run-info.outputs.sourceEvent == 'push' && steps.source-run-info.outputs.targetBranch == 'master'}}
+        shell: bash
         run: |
-          find . -type f -exec sed -i 's|search/search_index.json|https://storage.googleapis.com/cp-algorithms/search_index.json|g' {} +
+          sed -i 's|search/search_index.json|https://storage.googleapis.com/cp-algorithms/search_index.json|g' public/assets/javascripts/*.js
 
-      - name: "Get PR information"
-        uses: potiuk/get-workflow-origin@751d47254ef9e8b5eef955e24e79305233702781
-        id: source-run-info
+      - id: 'auth'
+        if: ${{ steps.source-run-info.outputs.sourceEvent == 'push' && steps.source-run-info.outputs.targetBranch == 'master'}}
+        uses: 'google-github-actions/auth@v0'
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          sourceRunId: ${{ github.event.workflow_run.id }}
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - uses: 'google-github-actions/upload-cloud-storage@v1'
+        if: ${{ steps.source-run-info.outputs.sourceEvent == 'push' && steps.source-run-info.outputs.targetBranch == 'master'}}
+        with:
+          path: 'public/search/search_index.json'
+          destination: 'cp-algorithms'
+
       - uses: FirebaseExtended/action-hosting-deploy@v0
         id: firebase-deploy
         if: env.FIREBASE_SERVICE_ACCOUNT
@@ -61,6 +78,7 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
           projectId: cp-algorithms
           channelId: ${{ steps.source-run-info.outputs.sourceEvent == 'push' && steps.source-run-info.outputs.targetBranch == 'master' && env.LIVE_NAME || env.PREVIEW_NAME }}
+
       - name: comment URL to PR
         if: ${{ steps.source-run-info.outputs.sourceEvent == 'pull_request' }}
         uses: actions/github-script@v6
