--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,9 +23,9 @@ theme:
     - navigation.tracking
     - navigation.tabs
     - toc.integrate
-repo_url: https://github.com/e-maxx-eng/e-maxx-eng
+repo_url: https://github.com/cp-algorithms/cp-algorithms
 edit_uri: edit/master/src/
-copyright: Text is available under the <a href="https://github.com/e-maxx-eng/e-maxx-eng/blob/master/LICENSE">Creative Commons Attribution Share Alike 4.0 International</a> License<br/>Copyright &copy; 2014 - 2022 by <a href="https://github.com/e-maxx-eng">https://github.com/e-maxx-eng</a>
+copyright: Text is available under the <a href="https://github.com/cp-algorithms/cp-algorithms/blob/master/LICENSE">Creative Commons Attribution Share Alike 4.0 International</a> License<br/>Copyright &copy; 2014 - 2022 by <a href="https://github.com/cp-algorithms">https://github.com/cp-algorithms</a>
 extra_javascript:
   - javascript/config.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
@@ -64,7 +64,7 @@ plugins:
       enabled: !ENV [MKDOCS_ENABLE_GIT_REVISION_DATE, False]
   - git-authors
   - git-committers:
-      repository: e-maxx-eng/e-maxx-eng
+      repository: cp-algorithms/cp-algorithms
       docs_path: src/
       token: !ENV MKDOCS_GIT_COMMITTERS_APIKEY
       enabled: !ENV [MKDOCS_ENABLE_GIT_COMMITTERS, False]
