--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,6 @@
 site_name: Algorithms for Competitive Programming
+site_url: https://cp-algorithms.com
+site_description: 'The goal of this project is to translate the wonderful resource http://e-maxx.ru/algo which provides descriptions of many algorithms and data structures especially popular in field of competitive programming. Moreover we want to improve the collected knowledge by extending the articles and adding new articles to the collection.'
 docs_dir: src
 site_dir: public
 use_directory_urls: false
@@ -70,6 +72,7 @@ plugins:
       token: !ENV MKDOCS_GIT_COMMITTERS_APIKEY
       enabled: !ENV [MKDOCS_ENABLE_GIT_COMMITTERS, False]
   - macros
+  - rss
 
 extra:
   analytics:
