enable permalink next to sections

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,8 @@ markdown_extensions:
       emoji_index: !!python/name:materialx.emoji.twemoji 
       emoji_generator: !!python/name:materialx.emoji.to_svg
   - meta
+  - toc:
+      permalink: true
 
 plugins:
   - mkdocs-simple-hooks:
