Added a new feature that allows users to copy the code-blocks/snippets directly using a copy button on the top right corner.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ theme:
     - navigation.tabs
     - toc.integrate
     - search.suggest
+    - content.code.copy
 repo_url: https://github.com/cp-algorithms/cp-algorithms
 repo_name: cp-algorithms/cp-algorithms
 edit_uri: edit/master/src/
