--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -7,10 +7,8 @@ on:
   pull_request:
 
 jobs:
-  # Reusable job for downloading and unzipping the artifact
-
   build:
-    uses: ./.github/workflows/build.yml@${{ github.ref }}
+    uses: ./.github/workflows/build.yml
     secrets: inherit
 
   download_and_unzip:
