--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: page-build
-          path: public/
+          path: public
 
       - name: Check public folder
         run: |
@@ -102,4 +102,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: public/
+          publish_dir: public
