--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -11,30 +11,18 @@ jobs:
     uses: ./.github/workflows/build.yml
     secrets: inherit
 
-  download_pages:
-    needs: build
+  deploy_live_website:
     runs-on: ubuntu-latest
+    if: >
+      ${{ github.event.workflow_run.event == 'pull_request' &&
+      github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: 'Download artifact'
+      - name: 'Download pages'
         uses: actions/download-artifact@v4
         with:
           name: page-build
           path: public
 
-      - name: Check public folder
-        run: |
-          ls public
-
-  deploy_live_website:
-    runs-on: ubuntu-latest
-    needs: download_pages
-    if: >
-      ${{ github.event.workflow_run.event == 'pull_request' &&
-      github.event.workflow_run.conclusion == 'success' }}
-    steps:
       - name: "Get PR information"
         uses: potiuk/get-workflow-origin@751d47254ef9e8b5eef955e24e79305233702781
         id: source-run-info
@@ -93,10 +81,12 @@ jobs:
 
   deploy_github_pages:
     runs-on: ubuntu-latest
-    needs: download_pages
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: 'Download pages'
+        uses: actions/download-artifact@v4
+        with:
+          name: page-build
+          path: public
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
