--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -6,11 +6,6 @@ on:
       - 'master'
   pull_request:
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -30,13 +25,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: 'Download pages'
+      - name: Download pages
         uses: actions/download-artifact@v4
         with:
           name: page-build
           path: public
 
-      - name: "Get PR information"
+      - name: Get PR information
         uses: potiuk/get-workflow-origin@751d47254ef9e8b5eef955e24e79305233702781
         id: source-run-info
         with:
@@ -108,6 +103,9 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - name: Check pages artifact
+        run: |
+          ls public
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
