Add pages: write permission

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -12,6 +12,7 @@ concurrency:
 
 permissions:
   id-token: write
+  pages: write
 
 jobs:
   build:
@@ -71,24 +72,6 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
           projectId: cp-algorithms
           channelId: ${{ steps.source-run-info.outputs.sourceEvent == 'push' && steps.source-run-info.outputs.targetBranch == 'master' && env.LIVE_NAME || env.PREVIEW_NAME }}
-
-      - name: comment URL to PR
-        if: ${{ steps.source-run-info.outputs.sourceEvent == 'pull_request' }}
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const body = `Visit the preview URL for this PR (for commit ${{ steps.source-run-info.outputs.sourceHeadSha }}):
-
-            ${{ steps.firebase-deploy.outputs.details_url }}
-
-            (expires ${{ steps.firebase-deploy.outputs.expire_time }})`;
-
-            github.rest.issues.createComment({
-              issue_number: ${{ steps.source-run-info.outputs.pullRequestNumber }},
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: body
-            })
 
   deploy_github_pages:
     needs: build
