Update google-github-actions/auth + delete-preview

--- a/.github/workflows/delete-preview.yml
+++ b/.github/workflows/delete-preview.yml
@@ -13,6 +13,11 @@ jobs:
         with:
           ref: gh-pages
 
+      - name: Configure Git identity
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Delete PR directory
         run: |
           PR_DIR=${{ github.event.pull_request.number }}
