Fix deploy to gh-pages

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -44,10 +44,9 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
           projectId: cp-algorithms
           channelId: live
-
   deploy_github_pages:
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'pull_request'
+    if: github.event.workflow_run.conclusion == 'success'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -55,8 +54,8 @@ jobs:
       - name: Download pages
         uses: actions/download-artifact@v4
         with:
-          run-id: ${{ github.event.workflow_run.id }}
-          github-token: ${{ github.token }}
+            run-id: ${{ github.event.workflow_run.id }}
+            github-token: ${{ github.token }}
           name: page-build
           path: public
 
@@ -71,21 +70,20 @@ jobs:
           github_token: ${{ github.token }}
           publish_dir: ./public
           publish_branch: gh-pages
-          destination_dir: ${{ github.event.pull_request.number || 'main' }}/
+          destination_dir: ${{ github.event.workflow_run.pull_requests[0].number || 'main' }}/
 
       - name: Update or create preview comment
-        if: github.event_name == 'pull_request'
         uses: actions/github-script@v6
         with:
           script: |
-            const prNumber = ${{ github.event.pull_request.number }};
-            const repo = context.repo.repo;
+            const prNumber = ${{ github.event.workflow_run.pull_requests[0].number }};
             const owner = context.repo.owner;
-            const commitSha = context.payload.pull_request.head.sha;
+            const repo = context.repo.repo;
+            const commitSha = ${{ github.event.workflow_run.head_sha }};
             const baseUrl = `https://${owner}.github.io/${repo}/`;
             const previewUrl = `${baseUrl}${prNumber}/`;
             const body = `Preview the changes for PR #${prNumber} (${commitSha}) here: [${previewUrl}](${previewUrl})`;
-  
+
             // Retrieve comments for the PR to check if the comment already exists
             const { data: comments } = await github.rest.issues.listComments({
               owner: owner,
