--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -75,6 +75,7 @@ jobs:
 
       - name: Update or create preview comment
         uses: actions/github-script@v6
+        if: github.event.workflow_run.event == 'pull_request'
         with:
           script: |
             const prNumber = ${{ github.event.workflow_run.pull_requests[0].number }};
